maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:15: error: not found: value NORTH
    if (getDirection()==NORTH && !estFaceMur()){
                        ^