maze.island.IslandMaze.scala.code
def mur():Boolean={
  left()
  if (estFaceMur()==true){
    return true
  }
  else{
  	return false
   } 
}


override def run() {
  while (!estSurBiscuit()){
    if (getDirection()==NORTH && !estFaceMur()){
      avance()
    }
    else {
      if (mur()){
      print(getDirection())
      right()
      if (estFaceMur()==false){
        avance()
      }
      else{
        right()
      }
  }
    else{
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
    }
    }
}
  prendBiscuit()
}